WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40240
[Qt] ChromeClientQt.cpp has coding-style errors
https://bugs.webkit.org/show_bug.cgi?id=40240
Summary
[Qt] ChromeClientQt.cpp has coding-style errors
Anders Bakken
Reported
2010-06-07 11:24:21 PDT
[Qt] ChromeClientQt.cpp has coding-style errors
Attachments
Patch
(5.23 KB, patch)
2010-06-07 11:25 PDT
,
Anders Bakken
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Bakken
Comment 1
2010-06-07 11:25:11 PDT
Created
attachment 58053
[details]
Patch
WebKit Commit Bot
Comment 2
2010-06-09 13:53:42 PDT
Comment on
attachment 58053
[details]
Patch Clearing flags on attachment: 58053 Committed
r60910
: <
http://trac.webkit.org/changeset/60910
>
WebKit Commit Bot
Comment 3
2010-06-09 13:53:48 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug