2010-06-09  Anders Bakken  <agbakken@gmail.com>

Reviewed by David Levin.

        [Qt] ChromeClientQt.cpp has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=40240

        * WebCoreSupport/ChromeClientQt.cpp:
        (WebCore::ChromeClientQt::pageRect):
        (WebCore::ChromeClientQt::createWindow):
        (WebCore::ChromeClientQt::runJavaScriptAlert):
        (WebCore::ChromeClientQt::runJavaScriptConfirm):
        (WebCore::ChromeClientQt::runJavaScriptPrompt):
        (WebCore::ChromeClientQt::print):
        (WebCore::ChromeClientQt::attachRootGraphicsLayer):
        (WebCore::ChromeClientQt::visibleRectForTiledBackingStore):

Canonical link: https://commits.webkit.org/51925@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60910 268f45cc-cd09-0410-ab3c-d52691b4dbfc